# nrf9160-rs-test

./: .gitignore  .gitmodules  Cargo.toml  memory.x  openocd.gdb  testapp.hex
.cargo/: config
src/: main.rs
