[package]
name = "testapp"
version = "0.1.0"
authors = ["Vincent Stakenburg <vincentstakenburg@gmail.com>"]
edition = "2018"

[dependencies]
tinyrlibc = "0.1.2"
nrfxlib-sys = "0.1.4"
alloc-cortex-m = "0.3.5"
cortex-m = "0.6.0"
cortex-m-rt = "0.6.9"
nrf91 = { version = "0.1.0", features = ["rt"] }
nrf9160-hal = { path = "./nrf52-hal/nrf9160-hal" }
nrf9160-dk-bsp = { path = "./nrf52-hal/boards/nRF9160-DK" }
nrf91-bsdlib = { path = "./nrf91-bsdlib" }
nb = "0.1.2"
embedded-hal = "0.2.3"
